# Formal2019_Practice1

./: CMakeLists.txt  README.md  automat.cpp  main.cpp  main.info  main1.cpp  test.cpp
report/: index-sort-f.html  index-sort-l.html  index.html
report/include/gtest/: gtest-matchers.h.func-sort-c.html  gtest-matchers.h.func.html  gtest-matchers.h.gcov.html  gtest-message.h.func-sort-c.html  gtest-message.h.func.html  gtest-message.h.gcov.html  gtest-printers.h.func-sort-c.html  gtest-printers.h.func.html  gtest-printers.h.gcov.html  gtest-test-part.h.func-sort-c.html  gtest-test-part.h.func.html  gtest-test-part.h.gcov.html  gtest.h.func-sort-c.html  gtest.h.func.html  gtest.h.gcov.html  (+3 more)
report/src/: gtest-death-test.cc.func-sort-c.html  gtest-death-test.cc.func.html  gtest-death-test.cc.gcov.html  gtest-filepath.cc.func-sort-c.html  gtest-filepath.cc.func.html  gtest-filepath.cc.gcov.html  gtest-internal-inl.h.func-sort-c.html  gtest-internal-inl.h.func.html  gtest-internal-inl.h.gcov.html  gtest-matchers.cc.func-sort-c.html  gtest-matchers.cc.func.html  gtest-matchers.cc.gcov.html  gtest-port.cc.func-sort-c.html  gtest-port.cc.func.html  gtest-port.cc.gcov.html  gtest-printers.cc.func-sort-c.html  gtest-printers.cc.func.html  gtest-printers.cc.gcov.html  gtest-test-part.cc.func-sort-c.html  gtest-test-part.cc.func.html  gtest-test-part.cc.gcov.html  gtest-typed-test.cc.func-sort-c.html  gtest-typed-test.cc.func.html  gtest-typed-test.cc.gcov.html  gtest.cc.func-sort-c.html  gtest.cc.func.html  gtest.cc.gcov.html  index-sort-f.html  index-sort-l.html  index.html
(+174 files in other folders)
